[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/HUD.gd" type="Script" id=1]
[ext_resource path="res://GUI/ServoSlider.tscn" type="PackedScene" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.70752
margin_right = -2.70752
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.156863 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -306.0
margin_top = 45.0
margin_right = -40.0
margin_bottom = 457.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_right = 0.93
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -202.0
margin_right = -1.38
margin_bottom = 130.0
custom_constants/separation = 23

[node name="GripperSlider" parent="Panel/VBox" instance=ExtResource( 2 )]
editor/display_folded = true

[node name="Label" parent="Panel/VBox/GripperSlider" index="0"]
text = "Gripper"

[node name="WristSlider" parent="Panel/VBox" instance=ExtResource( 2 )]
editor/display_folded = true
margin_top = 57.0
margin_bottom = 91.0

[node name="Label" parent="Panel/VBox/WristSlider" index="0"]
text = "Wrist"

[node name="ElbowSlider" parent="Panel/VBox" instance=ExtResource( 2 )]
editor/display_folded = true
margin_top = 114.0
margin_bottom = 148.0

[node name="Label" parent="Panel/VBox/ElbowSlider" index="0"]
text = "Elbow"

[node name="ShoulderSlider" parent="Panel/VBox" instance=ExtResource( 2 )]
editor/display_folded = true
margin_top = 171.0
margin_bottom = 205.0

[node name="Label" parent="Panel/VBox/ShoulderSlider" index="0"]
text = "Shoulder"

[node name="BaseSlider" parent="Panel/VBox" instance=ExtResource( 2 )]
editor/display_folded = true
margin_top = 228.0
margin_bottom = 262.0

[node name="Label" parent="Panel/VBox/BaseSlider" index="0"]
text = "Base"

[node name="SelectIK" type="CheckButton" parent="Panel/VBox"]
margin_top = 285.0
margin_right = 226.0
margin_bottom = 325.0
hint_tooltip = "Select between Manual servo control and Inverse Kinematics"
pressed = true
text = "Inverse Kinematics"

[node name="TextureButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.5
margin_top = -63.0
margin_right = 25.5
margin_bottom = -31.0
text = "Home"

[connection signal="value_changed" from="Panel/VBox/GripperSlider/HSlider" to="." method="_on_gripper_value_changed"]
[connection signal="value_changed" from="Panel/VBox/WristSlider/HSlider" to="." method="_on_wrist_value_changed"]
[connection signal="value_changed" from="Panel/VBox/ElbowSlider/HSlider" to="." method="_on_elbow_value_changed"]
[connection signal="value_changed" from="Panel/VBox/ShoulderSlider/HSlider" to="." method="_on_shoulder_value_changed"]
[connection signal="value_changed" from="Panel/VBox/BaseSlider/HSlider" to="." method="_on_base_value_changed"]
[connection signal="toggled" from="Panel/VBox/SelectIK" to="." method="_on_SelectIK_toggled"]

[editable path="Panel/VBox/GripperSlider"]

[editable path="Panel/VBox/WristSlider"]

[editable path="Panel/VBox/ElbowSlider"]

[editable path="Panel/VBox/ShoulderSlider"]

[editable path="Panel/VBox/BaseSlider"]
